--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
