--- a/client/package.json
+++ b/client/package.json
@@ -2,20 +2,20 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@apollo/client": "^3.7.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
-    "graphql": "^16.6.0",
+    "@apollo/client": "^3.5.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "graphql": "^15.4.0",
+    "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
-    "react": "^17.0.2",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
